--- a/app/views/client/profile/parts/_profile-nav.html.erb
+++ b/app/views/client/profile/parts/_profile-nav.html.erb
@@ -12,7 +12,7 @@
         <%= link_to "My Orders", client_profile_orders_path %>
       </li>
       <!-- <li id="menu-wishlist"><a href="/profile/wishlist">Wishlist</a></li>   -->
-      <li id="menu-settings"><%= link_to "Account", client_profile_settings_path(current_user) %></li>
+      <li id="menu-settings"><%= link_to "My Account", client_profile_settings_path(current_user) %></li>
       <!-- <li id="menu-logout"><a href="/profile/logout">Log out</a></li> -->
     </ul>
   </div>
