Profile - "My Tickets" - แก้ design ตาม comment ใน trello

--- a/app/assets/stylesheets/client/events.sass
+++ b/app/assets/stylesheets/client/events.sass
@@ -447,8 +447,9 @@ label
     color: #444
 
   .event-date-lg
-    padding-top: 20px
+    padding-top: 30px
     text-align: center
+    font-family: "Helvetica Neue", sans-serif
 
     .month
       font-size: 24px
@@ -456,6 +457,7 @@ label
 
     .date
       font-size: 60px
+      font-weight: bold
 
 
   .cover
@@ -474,6 +476,12 @@ label
 
       .title
         font-size: 20px
+        line-height: 1.6em
+
+        a
+          &:hover, &:active, &:link, &:visited
+            text-decoration: none
+
       .ticket-price
 
       .ticket-code
