--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -47,7 +47,7 @@
                         </div>
                         <div class="info-footer">
                           <div class="row">
-                            <div class="col-xs-12 col-md-7">
+                            <div class="col-xs-12">
                               <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= ticket.section.to_event_human %></div>
                               <div class="meta location"><i class="icon icon-xs icon-map-pin"></i> <%= ticket.event.location_name %></div>
                             </div>
@@ -56,9 +56,9 @@
                       </div>
                     </div>
                     <div class="col-xs-12 col-md-3">
-                      <a class="cover" style="background-image: url(<%= ticket.event.event_pictures.first.try(:media, :thumb) %>);" href="<%= client_event_path(ticket.event.id) %>">
+                      <div class="cover" style="background-image: url(<%= ticket.event.event_pictures.first.try(:media, :thumb) %>);">
                         <img src="<%= ticket.qr_code(:medium) %>" width="100%" />
-                      </a>
+                      </div>
                     </div>
                   </div>
                 </div>
