--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -102,7 +102,7 @@
     }
 
     body,#bodyTable{
-    /*@editable*/background-color:#FAFAFA;
+    /*@editable*/ /*background-color:#FAFAFA;*/
     }
     #bodyCell{
     /*@editable*/border-top:0;
@@ -151,7 +151,7 @@
     /*@editable*/text-align:left;
     }
     #templatePreheader{
-    /*@editable*/background-color:#FAFAFA;
+    /*@editable*/ /*background-color:#FAFAFA;*/
     /*@editable*/border-top:0;
     /*@editable*/border-bottom:0;
     /*@editable*/padding-top:9px;
@@ -410,7 +410,7 @@
 </head>
 <body>
   <center>
-    <table align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable" style="background-color:#FAFAFA;">
+    <table align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable" style="background-color:#FFFFFF;">
       <tr>
         <td align="center" valign="top" id="bodyCell">
         <!-- BEGIN TEMPLATE // -->
@@ -493,7 +493,7 @@
                             <tr>
                               <td class="mcnImageContent" valign="top" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0;">
                                 <a href="<%= "#{App.domain}" %>">
-                                  <img src="<%= "#{App.domain}/src/images/theme/logo.png" %>" style="height: 60px" />
+                                  <img src="<%= "#{App.domain}/src/images/theme/logo.png" %>" height="60" style="min-height: 60px; max-height: 60px;" />
                                 </a>
                                 <table style="width:564px;" class="mcpreview-image-uploader">
                                 </table>
@@ -567,6 +567,26 @@
                     </tr>
                   </tbody>
                 </table>
+                <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
+                  <tbody>
+                    <tr>
+                      <td width="30%"></td>
+                      <td width="40%" style="padding-top: 15px;">
+                        <table border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%" >
+                          <tbody>
+                            <tr>
+                              <td width="33.33%" align="center"><a href="<%= "#{App.facebook_link}" %>"><img src="<%= "#{App.domain}/src/images/icons/icon-facebook-black.png" %>" height="30" style="min-height: 30px; max-height: 30px;" /></a></td>
+                              <td width="33.33%" align="center"><a href="<%= "#{App.instagram_link}" %>"><img src="<%= "#{App.domain}/src/images/icons/icon-instagram-black.png" %>" height="30" style="min-height: 30px; max-height: 30px;" /></a></td>
+                              <td width="33.33%" align="center"><a href="<%= "#{App.line_link}" %>"><img src="<%= "#{App.domain}/src/images/icons/icon-line-black.png" %>" height="30" style="min-height: 30px; max-height: 30px;" /></a></td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                      <td width="30%"></td>
+                    </tr>
+                  </tbody>
+                </table>
+
               </td>
             </tr>
           </table>
